# brkraw-legacy

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATASETS.md  Dockerfile  Dockerfile.dev  FILE_FORMAT.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
brkraw/api/data/: study.py
brkraw/api/helper/: cycle.py
brkraw/app/backup/: __init__.py  cache.py  handler.py
brkraw/app/tonifti/: __init__.py  base.py  study.py
brkraw/lib/: backup.py  bids.py  loader.py  orient.py  pvobj.py  recon.py  utils.py
brkraw/scripts/: brkraw.py
brkraw_legacy/: __init__.py
brkraw_legacy/api/analyzer/: affine.py  dataarray.py  scaninfo.py
brkraw_legacy/api/data/: __init__.py  scan.py  study.py
brkraw_legacy/api/helper/: cycle.py  dataarray.py  image.py  orientation.py  slicepack.py
brkraw_legacy/api/pvobj/: base.py  parser.py
brkraw_legacy/app/backup/: __init__.py  cache.py  handler.py
brkraw_legacy/app/tonifti/: __init__.py  base.py  header.py  plugin.py  scan.py  study.py
brkraw_legacy/lib/: backup.py  bids.py  errors.py  loader.py  orient.py  parser.py  reference.py  subject_orient.py  utils.py
brkraw_legacy/scripts/: brk_legacy_backup.py  brkraw_legacy.py
docs/adr/: 0001-single-affine-implementation.md
tests/: 01_api_pvobj_test.py  02_api_analyzer_test.py  03_api_helper_test.py  04_api_data_test.py  05_app_tonifti_test.py  06_bids_test.py  07_conversion_test.py  08_orientation_test.py  09_nifti_header_test.py  10_bids_metadata_test.py  11_diffusion_test.py  12_complex_warning_test.py  13_slice_axis_test.py  conftest.py  logging.yaml  recon_api_tes_t.py
tools/: README.md  sweep_bids.py  sweep_nifti.py
