[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Natural Language :: English',
]
dependencies = [
    'pyyaml>=6.0.1',
    'numpy>=1.23.2',
    'tqdm>=4.64.0',
    'xnippet>=0.1.1',
    'reshipe>=0.1.0',
]
description = "Bruker PvDataset Loader"
license = {text = "GNLv3"}
dynamic = ["version"]
maintainers = [
    {name = "SungHo Lee", email = 'shlee@unc.edu'}
]
name = "brkraw"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    'bruker', 
    'data_handler', 
    'converter', 
    'administrator_tool', 
    'extensible', 
]

[project.urls]
Homepage = "https://brkraw.github.io"

[project.optional-dependencies]
all = ["brkraw[tonii]"]

legacy = [
    'brkraw[all]',
    'pandas>=1.5.0',
]

simpleitk = [
    'SimpleITK>=2.2.1',
]

tonii = [
    'nibabel>=3.2.1',
]

dev = [
    "ruff>=0.11.0",
    "pytest",
    "nbmake",
    "types-PyYAML",
]

[tool.hatch.version]
path = "brkraw/__init__.py"
style = "pep440"

[project.scripts]
brkraw = "brkraw.scripts.brkraw:main"
brk-backup = 'brkraw.scripts.brk_backup:main'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"