[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Natural Language :: English',
]
dependencies = [
    'pyyaml>=6.0.1',
    'numpy>=1.23.2',
    'tqdm>=4.64.0',
    'xnippet>=0.1.1',
    'reshipe>=0.1.0',
    'nibabel>=3.2.1',
    'pandas>=1.5.0',
    'pybids>=0.16',
]
description = "Bruker PvDataset Loader (maintained fork of the BrkRaw 0.3.x/0.4 line)"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]
authors = [
    {name = "SungHo Lee", email = 'shlee@unc.edu'},
    {name = "Woomi Ban", email = 'banwoomi@unc.edu'},
    {name = "Jaiden Dumas"},
    {name = "Gabriel A. Devenyi", email = 'gdevenyi@gmail.com'},
    {name = "Yen-Yu Ian Shih", email = 'shihy@neurology.unc.edu'},
]
maintainers = [
    {name = "Gabriel A. Devenyi", email = 'gdevenyi@gmail.com'}
]
name = "brkraw-legacy"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    'bruker',
    'data_handler',
    'converter',
    'administrator_tool',
    'extensible',
]

[project.urls]
Homepage = "https://github.com/gdevenyi/brkraw-legacy"
Repository = "https://github.com/gdevenyi/brkraw-legacy"
Issues = "https://github.com/gdevenyi/brkraw-legacy/issues"

[project.optional-dependencies]
simpleitk = [
    'SimpleITK>=2.2.1',
]

dev = [
    "ruff>=0.11.0",
    "pytest",
    "nbmake",
    "types-PyYAML",
    "bids-validator-deno",
]

[tool.hatch.version]
path = "brkraw_legacy/__init__.py"
style = "pep440"

[tool.hatch.build.targets.wheel]
packages = ["brkraw_legacy"]

[project.scripts]
brkraw-legacy = "brkraw_legacy.scripts.brkraw_legacy:main"
brk-legacy-backup = 'brkraw_legacy.scripts.brk_legacy_backup:main'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
